CHANGES
=======

* easier way of setting headers
* changelog

0.0.3
-----

* make pep8 happy
* more purging
* completely remove oslo\_log

0.0.2
-----

* simplify configurable ratelimitresponse and blacklistresponse; set status\_code; adjust tests
* switch from oslo\_log to logging; copy environ from request to response
* fix source
* bump redis requirement
* update readme

0.0.1
-----

* fix test
* drop logging
* already installed
* more pep8
* make pep8 happy
* tox with py3
* fix NotImplementedError
* millisecond accuracy; fix tests
* fix test
* sorted keys to fix test
* phrasing
* adds docs on metrics
* adds headers; udpates docs
* gitignore
* everything's an int
* it's an int
* full redis support with tests, docs, minor fixes (#7)
* redis support (#6)
* log level info->debug
* log level info->debug
* fix default: rate limit by initiator project id
* fix metric labels
* travis
* readme
* initial version based on openstack-watcher
* Initial commit