@@ -108,3 +108,4 @@ tools/Dockerfile
 tools/create_image.sh
 tools/*gz
 hacks
+.stestr/
